feat: Add per-program logging, theme management, and enhanced theming
Features:
- Per-program logging with individual log files and settings
- Theme save/delete functionality with metadata support
- Enhanced color system with ButtonTextColor and HeaderColor
- Font selector with all installed system fonts
- Polish language support (17 languages total)

Changes:
- Refactor theming system from hardcoded to file-based JSON themes
- Add ThemeManager for theme file management
- Add per-program logging to ProcessMonitorService and LoggerService
- Update all language files with new translation keys
- Improve Appearance settings layout (two-column color pickers)
- Fix theme application when changing colors manually
- Remove CatppuccinThemes.cs (replaced with JSON theme files)
- Add Themes folder with Light.json and Dark.json default themes

Technical:
- Add ThemeManager singleton for theme file operations
- Enhance LoggerService to support per-program logging
- Update ProcessMonitorService to manage per-program loggers
- Add theme save/delete dialogs in SettingsDialog
- Update all 17 language files with complete translations
- Improve theme lookup (internal name and display name support)

--- a/Localization/de.json
+++ b/Localization/de.json
@@ -16,6 +16,7 @@
   "DataGrid.RestartDelay": "Neustartverzögerung (Sek.)",
   "DataGrid.Status": "Status",
   "Dialog.Apply": "Übernehmen",
+  "Dialog.Applied": "Übernommen!",
   "Dialog.Cancel": "Abbrechen",
   "Dialog.ConfirmRemoval": "Entfernung Bestätigen",
   "Dialog.ExecutableFilesFilter": "Ausführbare Dateien (*.exe)|*.exe|Alle Dateien (*.*)|*.*",
@@ -86,6 +87,15 @@
   "ProgramEdit.ValidationError": "Validierungsfehler",
   "ProgramEdit.WorkingDirectory": "Arbeitsverzeichnis:",
   "ProgramEdit.WorkingDirectoryOptional": "Arbeitsverzeichnis (optional):",
+  "ProgramEdit.EnableTaskbarNotifications": "Taskleisten-Benachrichtigungen Aktivieren",
+  "ProgramEdit.Logging": "Protokollierung",
+  "ProgramEdit.EnableFileLogging": "Dateiprotokollierung Aktivieren",
+  "ProgramEdit.LogFilePath": "Protokolldatei-Verzeichnis (optional):",
+  "ProgramEdit.MinimumLogLevel": "Minimales Protokollniveau:",
+  "ProgramEdit.MaxLogFileSize": "Max. Protokolldateigröße (MB):",
+  "ProgramEdit.KeepLogFilesForDays": "Protokolldateien Aufbewahren (Tage):",
+  "ProgramEdit.InvalidMaxLogSize": "Maximale Protokolldateigröße muss eine positive Zahl sein.",
+  "ProgramEdit.InvalidKeepLogsDays": "Anzahl der Tage muss eine positive Zahl sein.",
   "Settings.About": "Über",
   "Settings.About.Copyright": "Copyright © 2025 Antik79",
   "Settings.About.Description": "Eine Windows-Desktop-Anwendung, die angegebene Programme überwacht und automatisch neu startet, wenn sie beendet werden.",
@@ -100,12 +110,15 @@
   "Settings.App.MinimizeToTrayDesc": "Wenn minimiert, wird die Anwendung in der Systemleiste statt in der Taskleiste angezeigt.",
   "Settings.App.StartMinimized": "Minimiert Starten",
   "Settings.App.StartMinimizedDesc": "RestartIt minimiert in der Systemleiste starten (erfordert 'In Systemleiste Minimieren').",
+  "Settings.App.MinimizeOnClose": "Beim Schließen Minimieren",
+  "Settings.App.MinimizeOnCloseDesc": "Beim Schließen des Fensters in die Systemleiste minimieren statt beenden.",
   "Settings.App.StartWithWindows": "Mit Windows Starten",
   "Settings.App.StartWithWindowsDesc": "RestartIt automatisch beim Windows-Start starten.",
   "Settings.Application": "Anwendung",
   "Settings.Email.Enable": "E-Mail-Benachrichtigungen Aktivieren",
   "Settings.Email.NotifyOnFailure": "Bei Neustart-Fehler Benachrichtigen",
   "Settings.Email.NotifyOnRestart": "Bei Erfolgreichem Neustart Benachrichtigen",
+  "Settings.Email.NotifyOnStop": "Bei Stoppen/Absturz Benachrichtigen",
   "Settings.Email.RecipientEmail": "Empfänger-E-Mail:",
   "Settings.Email.RecipientEmailRequired": "Bitte geben Sie die Empfänger-E-Mail ein.",
   "Settings.Email.SenderEmail": "Absender-E-Mail:",
@@ -119,11 +132,23 @@
   "Settings.Email.TestBody": "Dies ist eine Test-E-Mail, um zu überprüfen, ob Ihre E-Mail-Benachrichtigungseinstellungen korrekt funktionieren.\n\nWenn Sie diese E-Mail erhalten, sind Ihre Einstellungen richtig konfiguriert!",
   "Settings.Email.TestEmail": "Test-E-Mail Senden",
   "Settings.Email.TestError": "E-Mail-Test Fehlgeschlagen",
-  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
+  "Settings.Email.TestErrorMessage": "Fehler beim Senden der Test-E-Mail:\n\n{0}\n\nHäufige Probleme:\n• Falscher SMTP-Server oder Port\n• Ungültige Anmeldedaten\n• App-Passwort erforderlich (Gmail)\n• Firewall blockiert SMTP",
+
+  "Settings.Taskbar.Header": "Taskleisten-Benachrichtigungen",
+  "Settings.Taskbar.Enable": "Taskleisten-Benachrichtigungen Aktivieren",
+  "Settings.Taskbar.NotifyOnRestart": "Bei Erfolgreichem Neustart Benachrichtigen",
+  "Settings.Taskbar.NotifyOnFailure": "Bei Neustart-Fehler Benachrichtigen",
+  "Settings.Taskbar.NotifyOnStop": "Bei Stoppen/Absturz Benachrichtigen",
+
+  "Notification.RestartSuccess": "{0} erfolgreich neu gestartet",
+  "Notification.RestartFailure": "Neustart von {0} fehlgeschlagen",
+  "Notification.ProgramStopped": "{0} wurde gestoppt",
+  "Notification.ProgramRunning": "{0} läuft jetzt wieder",
   "Settings.Email.TestSubject": "Test-E-Mail von RestartIt",
   "Settings.Email.TestSuccess": "Test-E-Mail Gesendet",
   "Settings.Email.TestSuccessMessage": "Test-E-Mail erfolgreich gesendet! Überprüfen Sie Ihren Posteingang.",
   "Settings.Email.UseSsl": "SSL/TLS Verwenden",
+  "Settings.Notifications": "Benachrichtigungen",
   "Settings.EmailNotifications": "E-Mail-Benachrichtigungen",
   "Settings.Logging": "Protokollierung",
   "Settings.Logging.EnableFileLogging": "Dateiprotokollierung Aktivieren",
@@ -142,6 +167,8 @@
   "Tray.Exit": "Beenden",
   "Tray.MinimizedMessage": "Anwendung in Systemleiste minimiert",
   "Tray.ShowWindow": "Fenster Anzeigen",
+  "Tray.Monitors": "Überwachungen",
+  "Tray.Notifications": "Benachrichtigungen",
   "Validation.ArgumentsTooLong": "Argumente sind zu lang. Maximale Länge beträgt 8192 Zeichen.",
   "Validation.DirectoryNotFound": "Das Arbeitsverzeichnis existiert nicht.",
   "Validation.DirectoryValidationError": "Fehler beim Validieren des Verzeichnisses: {0}",
@@ -155,15 +182,42 @@
   "Validation.PathNotSupported": "Das Pfadformat wird nicht unterstützt.",
   "Validation.PathTooLong": "Der Pfad ist zu lang. Maximale Länge beträgt 260 Zeichen.",
   "Validation.PathValidationError": "Fehler beim Validieren des Pfads: {0}",
-  "Settings.Appearance": "Appearance",
-  "Settings.Appearance.FontFamily": "Font Family:",
-  "Settings.Appearance.FontSize": "Font Size:",
-  "Settings.Appearance.BackgroundColor": "Background Color:",
-  "Settings.Appearance.TextColor": "Text Color:",
-  "Settings.Appearance.HighlightColor": "Highlight Color:",
-  "Settings.Appearance.BorderColor": "Border Color:",
-  "Settings.Appearance.SurfaceColor": "Surface Color:",
-  "Settings.Appearance.SecondaryTextColor": "Secondary Text Color:",
-  "Settings.Appearance.Preview": "Preview:",
-  "Settings.Appearance.ResetToDefaults": "Reset to Defaults"
+  "Settings.Appearance": "Erscheinungsbild",
+  "Settings.Appearance.ThemePreset": "Theme-Voreinstellung:",
+  "Settings.Appearance.FontFamily": "Schriftfamilie:",
+  "Settings.Appearance.FontSize": "Schriftgröße:",
+  "Settings.Appearance.BackgroundColor": "Hintergrundfarbe:",
+  "Settings.Appearance.TextColor": "Textfarbe:",
+  "Settings.Appearance.HighlightColor": "Markierungsfarbe:",
+  "Settings.Appearance.BorderColor": "Rahmenfarbe:",
+  "Settings.Appearance.SurfaceColor": "Oberflächenfarbe:",
+  "Settings.Appearance.SecondaryTextColor": "Sekundäre Textfarbe:",
+  "Settings.Appearance.ButtonTextColor": "Schaltflächentextfarbe:",
+  "Settings.Appearance.HeaderColor": "Kopfzeilenfarbe:",
+  "Settings.Appearance.Colors": "Farben:",
+  "Settings.Appearance.Preview": "Vorschau:",
+  "Settings.Appearance.ResetToDefaults": "Auf Standardwerte zurücksetzen",
+  "Settings.Appearance.SaveTheme": "Theme speichern...",
+  "Settings.Appearance.DeleteTheme": "Theme löschen...",
+  "Settings.Appearance.SaveThemeDialog.Title": "Theme speichern",
+  "Settings.Appearance.SaveThemeDialog.Name": "Theme-Name:",
+  "Settings.Appearance.SaveThemeDialog.DisplayName": "Anzeigename:",
+  "Settings.Appearance.SaveThemeDialog.Description": "Beschreibung:",
+  "Settings.Appearance.SaveThemeDialog.Author": "Autor:",
+  "Settings.Appearance.SaveThemeDialog.NameRequired": "Theme-Name ist erforderlich.",
+  "Settings.Appearance.SaveThemeDialog.Success": "Theme erfolgreich gespeichert!",
+  "Settings.Appearance.SaveThemeDialog.Error": "Fehler beim Speichern des Themes.",
+  "Settings.Appearance.DeleteThemeDialog.Title": "Theme löschen",
+  "Settings.Appearance.DeleteThemeDialog.Confirm": "Möchten Sie das Theme '{0}' wirklich löschen?\n\nDiese Aktion kann nicht rückgängig gemacht werden.",
+  "Settings.Appearance.DeleteThemeDialog.Success": "Theme erfolgreich gelöscht!",
+  "Settings.Appearance.DeleteThemeDialog.Error": "Fehler beim Löschen des Themes.",
+  "Settings.Appearance.DeleteThemeDialog.NoSelection": "Bitte wählen Sie ein Theme zum Löschen aus.",
+  "Settings.Appearance.DeleteThemeDialog.CannotDeleteCustom": "Das 'Custom'-Theme kann nicht gelöscht werden.",
+  "Settings.Appearance.DeleteThemeDialog.CannotDeleteDefault": "Standard-Themes (Light oder Dark) können nicht gelöscht werden.",
+  "Settings.Appearance.DeleteThemeDialog.NotFound": "Theme nicht gefunden.",
+  "Common.OK": "OK",
+  "Common.Cancel": "Abbrechen",
+  "Common.Success": "Erfolg",
+  "Common.Error": "Fehler",
+  "Common.ValidationError": "Validierungsfehler"
 }
