--- a/Localization/en.json
+++ b/Localization/en.json
@@ -62,9 +62,19 @@
   "ProgramEdit.InvalidDelay": "Restart delay must be zero or a positive number.",
   "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
   "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
+  "ProgramEdit.EnableTaskbarNotifications": "Enable Taskbar Notifications",
+  "ProgramEdit.Logging": "Logging",
+  "ProgramEdit.EnableFileLogging": "Enable File Logging",
+  "ProgramEdit.LogFilePath": "Log File Directory (optional):",
+  "ProgramEdit.MinimumLogLevel": "Minimum Log Level:",
+  "ProgramEdit.MaxLogFileSize": "Max Log File Size (MB):",
+  "ProgramEdit.KeepLogFilesForDays": "Keep Log Files For (days):",
+  "ProgramEdit.InvalidMaxLogSize": "Max log file size must be a positive number.",
+  "ProgramEdit.InvalidKeepLogsDays": "Keep log files days must be a positive number.",
 
   "Settings.Title": "Settings",
   "Settings.Logging": "Logging",
+  "Settings.Notifications": "Notifications",
   "Settings.EmailNotifications": "Email Notifications",
   "Settings.Application": "Application",
   "Settings.About": "About",
@@ -87,6 +97,7 @@
   "Settings.Email.RecipientEmail": "Recipient Email:",
   "Settings.Email.NotifyOnRestart": "Notify on Successful Restart",
   "Settings.Email.NotifyOnFailure": "Notify on Restart Failure",
+  "Settings.Email.NotifyOnStop": "Notify on Stop/Crash",
   "Settings.Email.TestEmail": "Send Test Email",
   "Settings.Email.TestSuccess": "Test Email Sent",
   "Settings.Email.TestSuccessMessage": "Test email sent successfully! Check your inbox.",
@@ -99,12 +110,20 @@
   "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
   "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
 
+  "Settings.Taskbar.Header": "Taskbar Notifications",
+  "Settings.Taskbar.Enable": "Enable Taskbar Notifications",
+  "Settings.Taskbar.NotifyOnRestart": "Notify on Successful Restart",
+  "Settings.Taskbar.NotifyOnFailure": "Notify on Restart Failure",
+  "Settings.Taskbar.NotifyOnStop": "Notify on Stop/Crash",
+
   "Settings.App.StartWithWindows": "Start with Windows",
   "Settings.App.StartWithWindowsDesc": "Automatically start RestartIt when Windows starts.",
   "Settings.App.MinimizeToTray": "Minimize to System Tray",
   "Settings.App.MinimizeToTrayDesc": "When minimized, the application will hide to the system tray instead of the taskbar.",
   "Settings.App.StartMinimized": "Start Minimized",
   "Settings.App.StartMinimizedDesc": "Start RestartIt minimized to system tray (requires 'Minimize to system tray' enabled).",
+  "Settings.App.MinimizeOnClose": "Minimize on Close",
+  "Settings.App.MinimizeOnCloseDesc": "When closing the window, minimize to system tray instead of exiting.",
   "Settings.App.Language": "Language:",
 
   "Settings.Appearance": "Appearance",
@@ -117,8 +136,34 @@
   "Settings.Appearance.BorderColor": "Border Color:",
   "Settings.Appearance.SurfaceColor": "Surface Color:",
   "Settings.Appearance.SecondaryTextColor": "Secondary Text Color:",
+  "Settings.Appearance.ButtonTextColor": "Button Text Color:",
+  "Settings.Appearance.HeaderColor": "Header Color:",
+  "Settings.Appearance.Colors": "Colors:",
   "Settings.Appearance.Preview": "Preview:",
   "Settings.Appearance.ResetToDefaults": "Reset to Defaults",
+  "Settings.Appearance.SaveTheme": "Save Theme...",
+  "Settings.Appearance.DeleteTheme": "Delete Theme...",
+  "Settings.Appearance.SaveThemeDialog.Title": "Save Theme",
+  "Settings.Appearance.SaveThemeDialog.Name": "Theme Name:",
+  "Settings.Appearance.SaveThemeDialog.DisplayName": "Display Name:",
+  "Settings.Appearance.SaveThemeDialog.Description": "Description:",
+  "Settings.Appearance.SaveThemeDialog.Author": "Author:",
+  "Settings.Appearance.SaveThemeDialog.NameRequired": "Theme name is required.",
+  "Settings.Appearance.SaveThemeDialog.Success": "Theme saved successfully!",
+  "Settings.Appearance.SaveThemeDialog.Error": "Failed to save theme.",
+  "Settings.Appearance.DeleteThemeDialog.Title": "Delete Theme",
+  "Settings.Appearance.DeleteThemeDialog.Confirm": "Are you sure you want to delete the theme '{0}'?\n\nThis action cannot be undone.",
+  "Settings.Appearance.DeleteThemeDialog.Success": "Theme deleted successfully!",
+  "Settings.Appearance.DeleteThemeDialog.Error": "Failed to delete theme.",
+  "Settings.Appearance.DeleteThemeDialog.NoSelection": "Please select a theme to delete.",
+  "Settings.Appearance.DeleteThemeDialog.CannotDeleteCustom": "Cannot delete 'Custom' theme.",
+  "Settings.Appearance.DeleteThemeDialog.CannotDeleteDefault": "Cannot delete default themes (Light or Dark).",
+  "Settings.Appearance.DeleteThemeDialog.NotFound": "Theme not found.",
+  "Common.OK": "OK",
+  "Common.Cancel": "Cancel",
+  "Common.Success": "Success",
+  "Common.Error": "Error",
+  "Common.ValidationError": "Validation Error",
 
   "Settings.About.Version": "Version",
   "Settings.About.Description": "A Windows desktop application that monitors specified programs and automatically restarts them if they stop running.",
@@ -136,6 +181,14 @@
   "Export.ErrorMessage": "Error exporting logs: {0}",
 
   "Tray.ShowWindow": "Show Window",
+  "Tray.StartMonitoring": "Start Monitoring",
+  "Tray.StopMonitoring": "Stop Monitoring",
+  "Tray.Monitor": "Monitor",
+  "Tray.Monitors": "Monitors",
+  "Tray.Notifications": "Notifications",
+  "Tray.Options": "Options",
+  "Tray.MinimizeToTray": "Minimize to System Tray",
+  "Tray.MinimizeOnClose": "Minimize on Close",
   "Tray.Exit": "Exit",
   "Tray.MinimizedMessage": "Application minimized to system tray",
 
@@ -161,6 +214,11 @@
   "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
   "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
 
+  "Notification.RestartSuccess": "{0} restarted successfully",
+  "Notification.RestartFailure": "Failed to restart {0}",
+  "Notification.ProgramStopped": "{0} has stopped",
+  "Notification.ProgramRunning": "{0} is now running",
+
   "Validation.ExecutablePathRequired": "Executable path is required.",
   "Validation.InvalidPathCharacters": "The path contains invalid characters.",
   "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
@@ -183,3 +241,4 @@
   "Email.Body.Path": "Path: {0}",
   "Email.Body.Signature": "This is an automated message from RestartIt Application Monitor."
 }
+
