--- a/Localization/ja.json
+++ b/Localization/ja.json
@@ -1,167 +1,144 @@
 {
   "_metadata": {
-    "code": "ja",
-    "name": "Japanese",
+  "code": "ja",
+  "name": "Japanese",
     "nativeName": "日本語",
     "icon": "🇯🇵"
   },
+
   "App.Title": "RestartIt - アプリケーションモニター",
   "App.TrayTitle": "RestartIt - アプリケーションモニター",
-  "DataGrid.Actions": "操作",
-  "DataGrid.CheckInterval": "チェック間隔（秒）",
-  "DataGrid.Edit": "⚙ 編集",
-  "DataGrid.Enabled": "有効",
-  "DataGrid.Path": "パス",
-  "DataGrid.ProgramName": "プログラム名",
-  "DataGrid.RestartDelay": "再起動遅延（秒）",
-  "DataGrid.Status": "ステータス",
-  "Dialog.Apply": "適用",
-  "Dialog.Cancel": "キャンセル",
-  "Dialog.ConfirmRemoval": "削除の確認",
-  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
-  "Dialog.No": "いいえ",
-  "Dialog.NoSelection": "未選択",
-  "Dialog.OK": "OK",
-  "Dialog.RemoveQuestion": "本当に「{0}」を監視対象から削除しますか？",
-  "Dialog.SaveTestEmail": "保存してテストメール送信",
-  "Dialog.SelectProgram": "監視対象プログラムを選択",
-  "Dialog.SelectProgramFirst": "削除するプログラムを選択してください。",
-  "Dialog.Yes": "はい",
-  "Email.Body.Failed": "プログラム「{0}」が停止しましたが、再起動できませんでした。",
-  "Email.Body.Path": "パス: {0}",
-  "Email.Body.Restarted": "プログラム「{0}」が停止し、自動的に再起動されました。",
-  "Email.Body.Signature": "このメッセージは RestartIt Application Monitor からの自動送信です。",
-  "Email.Body.Time": "時間: {0}",
-  "Email.Subject.Failed": "RestartIt: 再起動に失敗しました - {0}",
-  "Email.Subject.Restart": "RestartIt: プログラムが再起動しました - {0}",
-  "Export.Error": "エクスポートエラー",
-  "Export.ErrorMessage": "ログのエクスポート中にエラーが発生しました: {0}",
-  "Export.Filter": "テキストファイル (*.txt)|*.txt|ログファイル (*.log)|*.log|すべてのファイル (*.*)|*.*",
-  "Export.LogsExported": "ログが正常にエクスポートされました！",
-  "Export.Success": "エクスポート完了",
-  "Export.Title": "ログをエクスポート",
-  "Export.UILogsExported": "UI ログが正常にエクスポートされました！",
-  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
-  "Log.ErrorCheckingProcess": "{0} が実行されているか確認中にエラーが発生しました: {1}",
-  "Log.ErrorMonitoring": "{0} の監視中にエラーが発生しました: {1}",
-  "Log.FailedToRestart": "{0} の再起動に失敗しました: {1}",
-  "Log.LogsExported": "ログがエクスポートされました: {0}",
-  "Log.MonitoringDisabled": "監視が無効になりました: {0}",
-  "Log.MonitoringEnabled": "監視が有効になりました: {0}",
-  "Log.ProcessNotFound": "プロセスが見つかりません: {0}",
-  "Log.ProcessRunning": "プロセスが実行中です: {0}",
-  "Log.ProgramAdded": "プログラムが追加されました: {0}",
-  "Log.ProgramNotRunning": "{0} は実行されていません。{1} 秒後に再起動します...",
-  "Log.ProgramRemoved": "プログラムが削除されました: {0}",
-  "Log.ProgramRestarted": "プログラムが再起動されました: {0}",
-  "Log.ProgramUpdated": "設定が更新されました: {0}",
-  "Log.RestartFailed": "プログラムの再起動に失敗しました: {0}",
-  "Log.SettingsUpdated": "設定が更新されました",
-  "Log.ShuttingDown": "RestartIt をシャットダウンしています",
-  "Log.Started": "RestartIt が正常に起動しました",
-  "Log.SuccessfullyRestarted": "{0} の再起動に成功しました",
-  "Log.ValidationFailed": "Cannot restart {0}: {1}",
-  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
-  "MainWindow.ActivityLog": "アクティビティログ",
+
   "MainWindow.AddProgram": "➕ プログラムを追加",
-  "MainWindow.ClearLog": "ログをクリア",
+  "MainWindow.Remove": "削除",
   "MainWindow.ExportLogs": "ログをエクスポート",
+  "MainWindow.Settings": "設定",
   "MainWindow.MonitoringActive": "監視中",
   "MainWindow.MonitoringStopped": "監視停止",
-  "MainWindow.Remove": "削除",
-  "MainWindow.Settings": "設定",
-  "ProgramEdit.AddTitle": "プログラム追加",
-  "ProgramEdit.Arguments": "引数:",
-  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
-  "ProgramEdit.Browse": "参照...",
-  "ProgramEdit.CheckInterval": "チェック間隔（秒）:",
-  "ProgramEdit.ExecutablePath": "実行ファイルのパス:",
-  "ProgramEdit.InvalidDelay": "再起動遅延は最低1秒である必要があります。",
-  "ProgramEdit.InvalidInterval": "チェック間隔は最低5秒である必要があります。",
-  "ProgramEdit.InvalidPath": "有効な実行ファイルを選択してください。",
-  "ProgramEdit.ProgramName": "プログラム名:",
-  "ProgramEdit.ProgramNameRequired": "プログラム名は必須です。",
-  "ProgramEdit.RestartDelay": "再起動遅延（秒）:",
+  "MainWindow.ActivityLog": "アクティビティログ",
+  "MainWindow.ClearLog": "ログをクリア",
+
+  "DataGrid.Enabled": "有効",
+  "DataGrid.ProgramName": "プログラム名",
+  "DataGrid.Path": "パス",
+  "DataGrid.CheckInterval": "チェック間隔（秒）",
+  "DataGrid.RestartDelay": "再起動遅延（秒）",
+  "DataGrid.Status": "ステータス",
+  "DataGrid.Actions": "操作",
+  "DataGrid.Edit": "⚙ 編集",
+
+  "Status.Runing": "実行中",
+  "Status.Stopped": "停止中",
+  "Status.Restarting": "再起動中",
+  "Status.Failed": "失敗",
+  "Status.Unknown": "不明",
+
+  "Dialog.SelectProgram": "監視対象プログラムを選択",
+  "Dialog.ConfirmRemoval": "削除の確認",
+  "Dialog.RemoveQuestion": "本当に「{0}」を監視対象から削除しますか？",
+  "Dialog.NoSelection": "未選択",
+  "Dialog.SelectProgramFirst": "削除するプログラムを選択してください。",
+  "Dialog.Yes": "はい",
+  "Dialog.No": "いいえ",
+  "Dialog.OK": "OK",
+  "Dialog.Cancel": "キャンセル",
+  "Dialog.Apply": "適用",
+  "Dialog.SaveTestEmail": "保存してテストメール送信",
+
   "ProgramEdit.Title": "プログラム編集",
-  "ProgramEdit.ValidationError": "検証エラー",
+  "ProgramEdit.AddTitle": "プログラム追加",
+  "ProgramEdit.ProgramName": "プログラム名:",
+  "ProgramEdit.ExecutablePath": "実行ファイルのパス:",
+  "ProgramEdit.Browse": "参照...",
+  "ProgramEdit.Arguments": "引数:",
   "ProgramEdit.WorkingDirectory": "作業ディレクトリ:",
-  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
+  "ProgramEdit.CheckInterval": "チェック間隔（秒）:",
+  "ProgramEdit.RestartDelay": "再起動遅延（秒）:",
+  "ProgramEdit.ValidationError": "検証エラー",
+  "ProgramEdit.ProgramNameRequired": "プログラム名は必須です。",
+  "ProgramEdit.InvalidPath": "有効な実行ファイルを選択してください。",
+  "ProgramEdit.InvalidInterval": "チェック間隔は最低5秒である必要があります。",
+  "ProgramEdit.InvalidDelay": "再起動遅延は最低1秒である必要があります。",
+
+  "Settings.Title": "設定",
+  "Settings.Logging": "ロギング",
+  "Settings.EmailNotifications": "メール通知",
+  "Settings.Application": "アプリケーション",
   "Settings.About": "情報",
-  "Settings.About.Copyright": "著作権 © 2025 Antik79",
-  "Settings.About.Description": "指定したプログラムを監視し、停止した場合に自動的に再起動する Windows デスクトップアプリケーションです。",
-  "Settings.About.GitHub": "GitHub リポジトリ",
-  "Settings.About.License": "MIT ライセンスの下でライセンスされています",
-  "Settings.About.TechStack": ".NET 8.0 と WPF で構築",
-  "Settings.About.Version": "バージョン",
-  "Settings.App.Language": "言語:",
+
+  "Settings.Logging.EnableFileLogging": "ファイルロギングを有効にする",
+  "Settings.Logging.LogFilePath": "ログファイルパス:",
+  "Settings.Logging.MinLogLevel": "最小ログレベル:",
+  "Settings.Logging.MaxFileSize": "最大ファイルサイズ（MB）:",
+  "Settings.Logging.KeepLogsFor": "ログ保持期間（日）:",
+  "Settings.Logging.OpenFolder": "フォルダーを開く",
+
+  "Settings.Email.Enable": "メール通知を有効にする",
+  "Settings.Email.SmtpServer": "SMTPサーバー:",
+  "Settings.Email.SmtpPort": "SMTPポート:",
+  "Settings.Email.UseSsl": "SSL/TLS を使用",
+  "Settings.Email.SenderEmail": "送信者メール:",
+  "Settings.Email.SenderName": "送信者名:",
+  "Settings.Email.SenderPassword": "送信者パスワード:",
+  "Settings.Email.RecipientEmail": "受信者メール:",
+  "Settings.Email.NotifyOnRestart": "再起動成功時に通知",
+  "Settings.Email.NotifyOnFailure": "再起動失敗時に通知",
+  "Settings.Email.TestEmail": "テストメール送信",
+  "Settings.Email.TestSuccess": "テストメール送信成功",
+  "Settings.Email.TestSuccessMessage": "テストメールが正常に送信されました。受信トレイをご確認ください。",
+  "Settings.Email.TestError": "テストメール送信失敗",
+
+  "Settings.App.StartWithWindows": "Windows 起動時に開始",
+  "Settings.App.StartWithWindowsDesc": "Windows 起動時に RestartIt を自動的に開始します。",
   "Settings.App.MinimizeToTray": "タスクトレイに最小化",
   "Settings.App.MinimizeToTrayDesc": "最小化すると、アプリはタスクバーではなくシステムトレイに隠れます。",
   "Settings.App.StartMinimized": "最小化状態で開始",
   "Settings.App.StartMinimizedDesc": "タスクトレイに最小化された状態で RestartIt を開始します（「タスクトレイに最小化」が有効である必要があります）。",
-  "Settings.App.StartWithWindows": "Windows 起動時に開始",
-  "Settings.App.StartWithWindowsDesc": "Windows 起動時に RestartIt を自動的に開始します。",
-  "Settings.Application": "アプリケーション",
-  "Settings.Email.Enable": "メール通知を有効にする",
-  "Settings.Email.NotifyOnFailure": "再起動失敗時に通知",
-  "Settings.Email.NotifyOnRestart": "再起動成功時に通知",
-  "Settings.Email.RecipientEmail": "受信者メール:",
-  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
-  "Settings.Email.SenderEmail": "送信者メール:",
-  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
-  "Settings.Email.SenderName": "送信者名:",
-  "Settings.Email.SenderPassword": "送信者パスワード:",
-  "Settings.Email.SmtpPort": "SMTPポート:",
-  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
-  "Settings.Email.SmtpServer": "SMTPサーバー:",
-  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
-  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
-  "Settings.Email.TestEmail": "テストメール送信",
-  "Settings.Email.TestError": "テストメール送信失敗",
-  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
-  "Settings.Email.TestSubject": "Test Email from RestartIt",
-  "Settings.Email.TestSuccess": "テストメール送信成功",
-  "Settings.Email.TestSuccessMessage": "テストメールが正常に送信されました。受信トレイをご確認ください。",
-  "Settings.Email.UseSsl": "SSL/TLS を使用",
-  "Settings.EmailNotifications": "メール通知",
-  "Settings.Logging": "ロギング",
-  "Settings.Logging.EnableFileLogging": "ファイルロギングを有効にする",
-  "Settings.Logging.KeepLogsFor": "ログ保持期間（日）:",
-  "Settings.Logging.LogFileDirectory": "Log File Directory:",
-  "Settings.Logging.LogFilePath": "ログファイルパス:",
-  "Settings.Logging.MaxFileSize": "最大ファイルサイズ（MB）:",
-  "Settings.Logging.MinLogLevel": "最小ログレベル:",
-  "Settings.Logging.OpenFolder": "フォルダーを開く",
-  "Settings.Title": "設定",
-  "Status.Failed": "失敗",
-  "Status.Restarting": "再起動中",
-  "Status.Running": "実行中",
-  "Status.Stopped": "停止中",
-  "Status.Unknown": "不明",
+  "Settings.App.Language": "言語:",
+
+  "Settings.About.Version": "バージョン",
+  "Settings.About.Description": "指定したプログラムを監視し、停止した場合に自動的に再起動する Windows デスクトップアプリケーションです。",
+  "Settings.About.GitHub": "GitHub リポジトリ",
+  "Settings.About.Copyright": "著作権 © 2025 Antik79",
+  "Settings.About.License": "MIT ライセンスの下でライセンスされています",
+  "Settings.About.TechStack": ".NET 8.0 と WPF で構築",
+
+  "Export.Title": "ログをエクスポート",
+  "Export.Filter": "テキストファイル (*.txt)|*.txt|ログファイル (*.log)|*.log|すべてのファイル (*.*)|*.*",
+  "Export.Success": "エクスポート完了",
+  "Export.LogsExported": "ログが正常にエクスポートされました！",
+  "Export.UILogsExported": "UI ログが正常にエクスポートされました！",
+  "Export.Error": "エクスポートエラー",
+  "Export.ErrorMessage": "ログのエクスポート中にエラーが発生しました: {0}",
+
+  "Tray.ShowWindow": "ウィンドウを表示",
   "Tray.Exit": "終了",
   "Tray.MinimizedMessage": "アプリケーションがタスクトレイに最小化されました",
-  "Tray.ShowWindow": "ウィンドウを表示",
-  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
-  "Validation.DirectoryNotFound": "The working directory does not exist.",
-  "Validation.DirectoryValidationError": "Error validating directory: {0}",
-  "Validation.ExecutablePathRequired": "Executable path is required.",
-  "Validation.FileNotFound": "The executable file does not exist.",
-  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
-  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
-  "Validation.InvalidPathFormat": "The path format is invalid.",
-  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
-  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
-  "Validation.PathNotSupported": "The path format is not supported.",
-  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
-  "Validation.PathValidationError": "Error validating path: {0}",
-  "Settings.Appearance": "Appearance",
-  "Settings.Appearance.FontFamily": "Font Family:",
-  "Settings.Appearance.FontSize": "Font Size:",
-  "Settings.Appearance.BackgroundColor": "Background Color:",
-  "Settings.Appearance.TextColor": "Text Color:",
-  "Settings.Appearance.HighlightColor": "Highlight Color:",
-  "Settings.Appearance.BorderColor": "Border Color:",
-  "Settings.Appearance.SurfaceColor": "Surface Color:",
-  "Settings.Appearance.SecondaryTextColor": "Secondary Text Color:",
-  "Settings.Appearance.Preview": "Preview:",
-  "Settings.Appearance.ResetToDefaults": "Reset to Defaults"
+
+  "Log.Started": "RestartIt が正常に起動しました",
+  "Log.ShuttingDown": "RestartIt をシャットダウンしています",
+  "Log.ProgramAdded": "プログラムが追加されました: {0}",
+  "Log.ProgramRemoved": "プログラムが削除されました: {0}",
+  "Log.ProgramUpdated": "設定が更新されました: {0}",
+  "Log.SettingsUpdated": "設定が更新されました",
+  "Log.MonitoringEnabled": "監視が有効になりました: {0}",
+  "Log.MonitoringDisabled": "監視が無効になりました: {0}",
+  "Log.LogsExported": "ログがエクスポートされました: {0}",
+  "Log.ProgramRestarted": "プログラムが再起動されました: {0}",
+  "Log.RestartFailed": "プログラムの再起動に失敗しました: {0}",
+  "Log.ProcessNotFound": "プロセスが見つかりません: {0}",
+  "Log.ProcessRunning": "プロセスが実行中です: {0}",
+  "Log.ProgramNotRunning": "{0} は実行されていません。{1} 秒後に再起動します...",
+  "Log.ErrorMonitoring": "{0} の監視中にエラーが発生しました: {1}",
+  "Log.ErrorCheckingProcess": "{0} が実行されているか確認中にエラーが発生しました: {1}",
+  "Log.SuccessfullyRestarted": "{0} の再起動に成功しました",
+  "Log.FailedToRestart": "{0} の再起動に失敗しました: {1}",
+
+  "Email.Subject.Restart": "RestartIt: プログラムが再起動しました - {0}",
+  "Email.Subject.Failed": "RestartIt: 再起動に失敗しました - {0}",
+  "Email.Body.Restarted": "プログラム「{0}」が停止し、自動的に再起動されました。",
+  "Email.Body.Failed": "プログラム「{0}」が停止しましたが、再起動できませんでした。",
+  "Email.Body.Time": "時間: {0}",
+  "Email.Body.Path": "パス: {0}",
+  "Email.Body.Signature": "このメッセージは RestartIt Application Monitor からの自動送信です。"
 }
