--- a/Localization/tr.json
+++ b/Localization/tr.json
@@ -1,167 +1,144 @@
 {
   "_metadata": {
     "code": "tr",
-    "name": "Turkish",
+  "name": "Turkish",
     "nativeName": "Türkçe",
-    "icon": "🇹🇷"
+  "icon": "🇹🇷"
   },
+
   "App.Title": "RestartIt - Uygulama İzleyicisi",
   "App.TrayTitle": "RestartIt - Uygulama İzleyicisi",
-  "DataGrid.Actions": "Eylemler",
-  "DataGrid.CheckInterval": "Kontrol Aralığı (sn)",
-  "DataGrid.Edit": "⚙ Düzenle",
-  "DataGrid.Enabled": "Etkin",
-  "DataGrid.Path": "Yol",
-  "DataGrid.ProgramName": "Program Adı",
-  "DataGrid.RestartDelay": "Yeniden Başlatma Gecikmesi (sn)",
-  "DataGrid.Status": "Durum",
-  "Dialog.Apply": "Uygula",
-  "Dialog.Cancel": "İptal",
-  "Dialog.ConfirmRemoval": "Kaldırmayı Onayla",
-  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
-  "Dialog.No": "Hayır",
-  "Dialog.NoSelection": "Seçim Yok",
-  "Dialog.OK": "Tamam",
-  "Dialog.RemoveQuestion": "'{0}' öğesini izlemelerden kaldırmak istediğinizden emin misiniz?",
-  "Dialog.SaveTestEmail": "Kaydet ve Test E-postası Gönder",
-  "Dialog.SelectProgram": "İzlenecek Programı Seç",
-  "Dialog.SelectProgramFirst": "Lütfen önce kaldırılacak bir program seçin.",
-  "Dialog.Yes": "Evet",
-  "Email.Body.Failed": "Program '{0}' durdu ancak yeniden başlatılamadı.",
-  "Email.Body.Path": "Yol: {0}",
-  "Email.Body.Restarted": "Program '{0}' durdu ve otomatik olarak yeniden başlatıldı.",
-  "Email.Body.Signature": "Bu mesaj RestartIt Application Monitor tarafından otomatik olarak gönderilmiştir.",
-  "Email.Body.Time": "Zaman: {0}",
-  "Email.Subject.Failed": "RestartIt: Yeniden Başlatma Başarısız - {0}",
-  "Email.Subject.Restart": "RestartIt: Program Yeniden Başlatıldı - {0}",
-  "Export.Error": "Dışa Aktarma Hatası",
-  "Export.ErrorMessage": "Günlük dışa aktarılırken hata oluştu: {0}",
-  "Export.Filter": "Metin Dosyaları (*.txt)|*.txt|Günlük Dosyaları (*.log)|*.log|Tüm Dosyalar (*.*)|*.*",
-  "Export.LogsExported": "Günlükler başarıyla dışa aktarıldı!",
-  "Export.Success": "Dışa Aktarım Tamamlandı",
-  "Export.Title": "Günlükleri Dışa Aktar",
-  "Export.UILogsExported": "UI günlükleri başarıyla dışa aktarıldı!",
-  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
-  "Log.ErrorCheckingProcess": "{0} çalışıp çalışmadığı kontrol edilirken hata: {1}",
-  "Log.ErrorMonitoring": "{0} izlenirken hata: {1}",
-  "Log.FailedToRestart": "{0} yeniden başlatılamadı: {1}",
-  "Log.LogsExported": "Günlükler şuraya dışa aktarıldı: {0}",
-  "Log.MonitoringDisabled": "İzleme devre dışı bırakıldı: {0}",
-  "Log.MonitoringEnabled": "İzleme etkinleştirildi: {0}",
-  "Log.ProcessNotFound": "İşlem bulunamadı: {0}",
-  "Log.ProcessRunning": "İşlem çalışıyor: {0}",
-  "Log.ProgramAdded": "Program eklendi: {0}",
-  "Log.ProgramNotRunning": "{0} çalışmıyor. {1} saniye içinde yeniden başlatılıyor...",
-  "Log.ProgramRemoved": "Program kaldırıldı: {0}",
-  "Log.ProgramRestarted": "Program yeniden başlatıldı: {0}",
-  "Log.ProgramUpdated": "Ayarlar güncellendi: {0}",
-  "Log.RestartFailed": "Program yeniden başlatılamadı: {0}",
-  "Log.SettingsUpdated": "Ayarlar güncellendi",
-  "Log.ShuttingDown": "RestartIt kapanıyor",
-  "Log.Started": "RestartIt başarıyla başladı",
-  "Log.SuccessfullyRestarted": "{0} başarıyla yeniden başlatıldı",
-  "Log.ValidationFailed": "Cannot restart {0}: {1}",
-  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
-  "MainWindow.ActivityLog": "Aktivite Günlüğü",
+
   "MainWindow.AddProgram": "➕ Program Ekle",
-  "MainWindow.ClearLog": "Günlüğü Temizle",
+  "MainWindow.Remove": "Kaldır",
   "MainWindow.ExportLogs": "Günlükleri Dışa Aktar",
+  "MainWindow.Setings": "Ayarlar",
   "MainWindow.MonitoringActive": "İzleme Aktif",
   "MainWindow.MonitoringStopped": "İzleme Durduruldu",
-  "MainWindow.Remove": "Kaldır",
-  "MainWindow.Settings": "Ayarlar",
-  "ProgramEdit.AddTitle": "Program Ekle",
-  "ProgramEdit.Arguments": "Argümanlar:",
-  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
-  "ProgramEdit.Browse": "Gözat...",
-  "ProgramEdit.CheckInterval": "Kontrol Aralığı (saniye):",
-  "ProgramEdit.ExecutablePath": "Çalıştırılabilir Yol:",
-  "ProgramEdit.InvalidDelay": "Yeniden başlatma gecikmesi en az 1 saniye olmalıdır.",
-  "ProgramEdit.InvalidInterval": "Kontrol aralığı en az 5 saniye olmalıdır.",
-  "ProgramEdit.InvalidPath": "Geçerli bir çalıştırılabilir dosya seçin.",
-  "ProgramEdit.ProgramName": "Program Adı:",
-  "ProgramEdit.ProgramNameRequired": "Program adı zorunludur.",
-  "ProgramEdit.RestartDelay": "Yeniden Başlatma Gecikmesi (saniye):",
+  "MainWindow.ActivityLog": "Aktivite Günlüğü",
+  "MainWindow.ClearLog": "Günlüğü Temizle",
+
+  "DataGrid.Enabled": "Etkin",
+  "DataGrid.ProgramName": "Program Adı",
+  "DataGrid.Path": "Yol",
+  "DataGrid.CheckInterval": "Kontrol Aralığı (sn)",
+  "DataGrid.RestartDelay": "Yeniden Başlatma Gecikmesi (sn)",
+  "DataGrid.Status": "Durum",
+  "DataGrid.Actions": "Eylemler",
+  "DataGrid.Edit": "⚙ Düzenle",
+
+  "Status.Running": "Çalışıyor",
+  "Status.Stopped": "Durduruldu",
+  "Status.Restarting": "Yeniden Başlatılıyor",
+  "Status.Failed": "Başarısız",
+  "Status.Unknown": "Bilinmeyen",
+
+  "Dialog.SelectProgram": "İzlenecek Programı Seç",
+  "Dialog.ConfirmRemoval": "Kaldırmayı Onayla",
+  "Dialog.RemoveQuestion": "'{0}' öğesini izlemelerden kaldırmak istediğinizden emin misiniz?",
+  "Dialog.NoSelection": "Seçim Yok",
+  "Dialog.SelectProgramFirst": "Lütfen önce kaldırılacak bir program seçin.",
+  "Dialog.Yes": "Evet",
+  "Dialog.No": "Hayır",
+  "Dialog.OK": "Tamam",
+  "Dialog.Cancel": "İptal",
+  "Dialog.Apply": "Uygula",
+  "Dialog.SaveTestEmail": "Kaydet ve Test E-postası Gönder",
+
   "ProgramEdit.Title": "Programı Düzenle",
-  "ProgramEdit.ValidationError": "Doğrulama Hatası",
+  "ProgramEdit.AddTitle": "Program Ekle",
+  "ProgramEdit.ProgramName": "Program Adı:",
+  "ProgramEdit.ExecutablePath": "Çalıştırılabilir Yol:",
+  "ProgramEdit.Browse": "Gözat...",
+  "ProgramEdit.Arguments": "Argümanlar:",
   "ProgramEdit.WorkingDirectory": "Çalışma Dizini:",
-  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
+  "ProgramEdit.CheckInterval": "Kontrol Aralığı (saniye):",
+  "ProgramEdit.RestartDelay": "Yeniden Başlatma Gecikmesi (saniye):",
+  "ProgramEdit.ValidationError": "Doğrulama Hatası",
+  "ProgramEdit.ProgramNameRequired": "Program adı zorunludur.",
+  "ProgramEdit.InvalidPath": "Geçerli bir çalıştırılabilir dosya seçin.",
+  "ProgramEdit.InvalidInterval": "Kontrol aralığı en az 5 saniye olmalıdır.",
+  "ProgramEdit.InvalidDelay": "Yeniden başlatma gecikmesi en az 1 saniye olmalıdır.",
+
+  "Settings.Title": "Ayarlar",
+  "Settings.Logging": "Günlükleme",
+  "Settings.EmailNotifications": "E-posta Bildirimleri",
+  "Settings.Application": "Uygulama",
   "Settings.About": "Hakında",
-  "Settings.About.Copyright": "Telif Hakkı © 2025 Antik79",
-  "Settings.About.Description": "Belirtilen programları izleyen ve durduklarında otomatik olarak yeniden başlatan bir Windows masaüstü uygulamasıdır.",
-  "Settings.About.GitHub": "GitHub Deposu",
-  "Settings.About.License": "MIT Lisansı altında lisanslanmıştır",
-  "Settings.About.TechStack": ".NET 8.0 ve WPF ile geliştirilmiştir",
-  "Settings.About.Version": "Versiyon",
-  "Settings.App.Language": "Dil:",
+
+  "Settings.Logging.EnableFileLogging": "Dosya Günlüğünü Etkinleştir",
+  "Settings.Logging.LogFilePath": "Günlük Dosyası Yolu:",
+  "Settings.Logging.MinLogLevel": "Minimum Günlük Seviyesi:",
+  "Settings.Logging.MaxFileSize": "Maksimum Dosya Boyutu (MB):",
+  "Settings.Logging.KeepLogsFor": "Günlükleri Saklama Süresi (gün):",
+  "Settings.Logging.OpenFolder": "Klasörü Aç",
+
+  "Settings.Email.Enable": "E-posta Bildirimlerini Etkinleştir",
+  "Settings.Email.SmtpServer": "SMTP Sunucusu:",
+  "Settings.Email.SmtpPort": "SMTP Bağlantı Noktası:",
+  "Settings.Email.UseSsl": "SSL/TLS Kullan",
+  "Settings.Email.SenderEmail": "Gönderen E-posta:",
+  "Settings.Email.SenderName": "Gönderen Adı:",
+  "Settings.Email.SenderPassword": "Gönderen Şifresi:",
+  "Settings.Email.RecipientEmail": "Alıcı E-posta:",
+  "Settings.Email.NotifyOnRestart": "Başarılı Yeniden Başlatmada Bildir",
+  "Settings.Email.NotifyOnFailure": "Yeniden Başlatma Başarısızlığında Bildir",
+  "Settings.Email.TestEmail": "Test E-postası Gönder",
+  "Settings.Email.TestSuccess": "Test E-postası Gönderildi",
+  "Settings.Email.TestSuccessMessage": "Test e-postası başarıyla gönderildi! Gelen kutunuzu kontrol edin.",
+  "Settings.Email.TestError": "Test E-postası Gönderilemedi",
+
+  "Settings.App.StartWithWindows": "Windows ile Başlat",
+  "Settings.App.StartWithWindowsDesc": "Windows başladığında RestartIt otomatik olarak başlatılır.",
   "Settings.App.MinimizeToTray": "Sistem Tepsisine Küçült",
   "Settings.App.MinimizeToTrayDesc": "Küçültüldüğünde uygulama görev çubuğu yerine sistem tepsisinde gizlenir.",
   "Settings.App.StartMinimized": "Küçültülmüş Başlat",
   "Settings.App.StartMinimizedDesc": "RestartIt'i sistem tepsisinde küçültülmüş olarak başlatır (\"Sistem Tepsisine Küçült\" etkin olmalı).",
-  "Settings.App.StartWithWindows": "Windows ile Başlat",
-  "Settings.App.StartWithWindowsDesc": "Windows başladığında RestartIt otomatik olarak başlatılır.",
-  "Settings.Application": "Uygulama",
-  "Settings.Email.Enable": "E-posta Bildirimlerini Etkinleştir",
-  "Settings.Email.NotifyOnFailure": "Yeniden Başlatma Başarısızlığında Bildir",
-  "Settings.Email.NotifyOnRestart": "Başarılı Yeniden Başlatmada Bildir",
-  "Settings.Email.RecipientEmail": "Alıcı E-posta:",
-  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
-  "Settings.Email.SenderEmail": "Gönderen E-posta:",
-  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
-  "Settings.Email.SenderName": "Gönderen Adı:",
-  "Settings.Email.SenderPassword": "Gönderen Şifresi:",
-  "Settings.Email.SmtpPort": "SMTP Bağlantı Noktası:",
-  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
-  "Settings.Email.SmtpServer": "SMTP Sunucusu:",
-  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
-  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
-  "Settings.Email.TestEmail": "Test E-postası Gönder",
-  "Settings.Email.TestError": "Test E-postası Gönderilemedi",
-  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
-  "Settings.Email.TestSubject": "Test Email from RestartIt",
-  "Settings.Email.TestSuccess": "Test E-postası Gönderildi",
-  "Settings.Email.TestSuccessMessage": "Test e-postası başarıyla gönderildi! Gelen kutunuzu kontrol edin.",
-  "Settings.Email.UseSsl": "SSL/TLS Kullan",
-  "Settings.EmailNotifications": "E-posta Bildirimleri",
-  "Settings.Logging": "Günlükleme",
-  "Settings.Logging.EnableFileLogging": "Dosya Günlüğünü Etkinleştir",
-  "Settings.Logging.KeepLogsFor": "Günlükleri Saklama Süresi (gün):",
-  "Settings.Logging.LogFileDirectory": "Log File Directory:",
-  "Settings.Logging.LogFilePath": "Günlük Dosyası Yolu:",
-  "Settings.Logging.MaxFileSize": "Maksimum Dosya Boyutu (MB):",
-  "Settings.Logging.MinLogLevel": "Minimum Günlük Seviyesi:",
-  "Settings.Logging.OpenFolder": "Klasörü Aç",
-  "Settings.Title": "Ayarlar",
-  "Status.Failed": "Başarısız",
-  "Status.Restarting": "Yeniden Başlatılıyor",
-  "Status.Running": "Çalışıyor",
-  "Status.Stopped": "Durduruldu",
-  "Status.Unknown": "Bilinmeyen",
+  "Settings.App.Language": "Dil:",
+
+  "Settings.About.Version": "Versiyon",
+  "Settings.About.Description": "Belirtilen programları izleyen ve durduklarında otomatik olarak yeniden başlatan bir Windows masaüstü uygulamasıdır.",
+  "Settings.About.GitHub": "GitHub Deposu",
+  "Settings.About.Copyright": "Telif Hakkı © 2025 Antik79",
+  "Settings.About.License": "MIT Lisansı altında lisanslanmıştır",
+  "Settings.About.TechStack": ".NET 8.0 ve WPF ile geliştirilmiştir",
+
+  "Export.Title": "Günlükleri Dışa Aktar",
+  "Export.Filter": "Metin Dosyaları (*.txt)|*.txt|Günlük Dosyaları (*.log)|*.log|Tüm Dosyalar (*.*)|*.*",
+  "Export.Success": "Dışa Aktarım Tamamlandı",
+  "Export.LogsExported": "Günlükler başarıyla dışa aktarıldı!",
+  "Export.UILogsExported": "UI günlükleri başarıyla dışa aktarıldı!",
+  "Export.Error": "Dışa Aktarma Hatası",
+  "Export.ErrorMessage": "Günlük dışa aktarılırken hata oluştu: {0}",
+
+  "Tray.ShowWindow": "Pencereyi Göster",
   "Tray.Exit": "Çıkış",
   "Tray.MinimizedMessage": "Uygulama sistem tepsisine küçültüldü",
-  "Tray.ShowWindow": "Pencereyi Göster",
-  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
-  "Validation.DirectoryNotFound": "The working directory does not exist.",
-  "Validation.DirectoryValidationError": "Error validating directory: {0}",
-  "Validation.ExecutablePathRequired": "Executable path is required.",
-  "Validation.FileNotFound": "The executable file does not exist.",
-  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
-  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
-  "Validation.InvalidPathFormat": "The path format is invalid.",
-  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
-  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
-  "Validation.PathNotSupported": "The path format is not supported.",
-  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
-  "Validation.PathValidationError": "Error validating path: {0}",
-  "Settings.Appearance": "Appearance",
-  "Settings.Appearance.FontFamily": "Font Family:",
-  "Settings.Appearance.FontSize": "Font Size:",
-  "Settings.Appearance.BackgroundColor": "Background Color:",
-  "Settings.Appearance.TextColor": "Text Color:",
-  "Settings.Appearance.HighlightColor": "Highlight Color:",
-  "Settings.Appearance.BorderColor": "Border Color:",
-  "Settings.Appearance.SurfaceColor": "Surface Color:",
-  "Settings.Appearance.SecondaryTextColor": "Secondary Text Color:",
-  "Settings.Appearance.Preview": "Preview:",
-  "Settings.Appearance.ResetToDefaults": "Reset to Defaults"
+
+  "Log.Started": "RestartIt başarıyla başladı",
+  "Log.ShuttingDown": "RestartIt kapanıyor",
+  "Log.ProgramAdded": "Program eklendi: {0}",
+  "Log.ProgramRemoved": "Program kaldırıldı: {0}",
+  "Log.ProgramUpdated": "Ayarlar güncellendi: {0}",
+  "Log.SettingsUpdated": "Ayarlar güncellendi",
+  "Log.MonitoringEnabled": "İzleme etkinleştirildi: {0}",
+  "Log.MonitoringDisabled": "İzleme devre dışı bırakıldı: {0}",
+  "Log.LogsExported": "Günlükler şuraya dışa aktarıldı: {0}",
+  "Log.ProgramRestarted": "Program yeniden başlatıldı: {0}",
+  "Log.RestartFailed": "Program yeniden başlatılamadı: {0}",
+  "Log.ProcessNotFound": "İşlem bulunamadı: {0}",
+  "Log.ProcessRunning": "İşlem çalışıyor: {0}",
+  "Log.ProgramNotRunning": "{0} çalışmıyor. {1} saniye içinde yeniden başlatılıyor...",
+  "Log.ErrorMonitoring": "{0} izlenirken hata: {1}",
+  "Log.ErrorCheckingProcess": "{0} çalışıp çalışmadığı kontrol edilirken hata: {1}",
+  "Log.SuccessfullyRestarted": "{0} başarıyla yeniden başlatıldı",
+  "Log.FailedToRestart": "{0} yeniden başlatılamadı: {1}",
+
+  "Email.Subject.Restart": "RestartIt: Program Yeniden Başlatıldı - {0}",
+  "Email.Subject.Failed": "RestartIt: Yeniden Başlatma Başarısız - {0}",
+  "Email.Body.Restarted": "Program '{0}' durdu ve otomatik olarak yeniden başlatıldı.",
+  "Email.Body.Failed": "Program '{0}' durdu ancak yeniden başlatılamadı.",
+  "Email.Body.Time": "Zaman: {0}",
+  "Email.Body.Path": "Yol: {0}",
+  "Email.Body.Signature": "Bu mesaj RestartIt Application Monitor tarafından otomatik olarak gönderilmiştir."
 }
