--- a/Localization/no.json
+++ b/Localization/no.json
@@ -1,167 +1,29 @@
-{
-  "_metadata": {
-    "code": "no",
-    "name": "Norwegian",
-    "nativeName": "Norsk",
-    "icon": "🇳🇴"
-  },
-  "App.Title": "RestartIt - Applikasjonsmonitor",
-  "App.TrayTitle": "RestartIt - Applikasjonsmonitor",
-  "DataGrid.Actions": "Handlinger",
-  "DataGrid.CheckInterval": "Sjekkintervall (sek)",
-  "DataGrid.Edit": "⚙ Rediger",
-  "DataGrid.Enabled": "Aktivert",
-  "DataGrid.Path": "Sti",
-  "DataGrid.ProgramName": "Programnavn",
-  "DataGrid.RestartDelay": "Omstartsforsinkelse (sek)",
-  "DataGrid.Status": "Status",
-  "Dialog.Apply": "Bruk",
-  "Dialog.Cancel": "Avbryt",
-  "Dialog.ConfirmRemoval": "Bekreft fjerning",
-  "Dialog.ExecutableFilesFilter": "Executable Files (*.exe)|*.exe|All Files (*.*)|*.*",
-  "Dialog.No": "Nei",
-  "Dialog.NoSelection": "Ingen valg",
-  "Dialog.OK": "OK",
-  "Dialog.RemoveQuestion": "Er du sikker på at du vil fjerne '{0}' fra overvåkingen?",
-  "Dialog.SaveTestEmail": "Lagre og test e‑post",
-  "Dialog.SelectProgram": "Velg program å overvåke",
-  "Dialog.SelectProgramFirst": "Vennligst velg et program som skal fjernes.",
-  "Dialog.Yes": "Ja",
-  "Email.Body.Failed": "Programmet '{0}' har sluttet å kjøre men kunne ikke startes på nytt.",
-  "Email.Body.Path": "Sti: {0}",
-  "Email.Body.Restarted": "Programmet '{0}' har sluttet å kjøre og ble automatisk startet på nytt.",
-  "Email.Body.Signature": "Dette er en automatisert melding fra RestartIt Application Monitor.",
-  "Email.Body.Time": "Tid: {0}",
-  "Email.Subject.Failed": "RestartIt: Omstart mislyktes - {0}",
-  "Email.Subject.Restart": "RestartIt: Program omstartet - {0}",
-  "Export.Error": "Eksportfeil",
-  "Export.ErrorMessage": "Feil ved eksport av logger: {0}",
-  "Export.Filter": "Tekstfiler (.txt)|.txt|Loggfiler (.log)|.log|Alle filer (.)|.",
-  "Export.LogsExported": "Logger eksportert vellykket!",
-  "Export.Success": "Eksport fullført",
-  "Export.Title": "Eksporter logger",
-  "Export.UILogsExported": "UI‑logger eksportert vellykket!",
-  "Log.ArgumentsInvalid": "Cannot restart {0}: Arguments invalid - {1}",
-  "Log.ErrorCheckingProcess": "Feil ved kontroll om {0} kjører: {1}",
-  "Log.ErrorMonitoring": "Feil ved overvåkning av {0}: {1}",
-  "Log.FailedToRestart": "Kunne ikke starte {0} på nytt: {1}",
-  "Log.LogsExported": "Logger eksportert til: {0}",
-  "Log.MonitoringDisabled": "Overvåking deaktivert for: {0}",
-  "Log.MonitoringEnabled": "Overvåking aktivert for: {0}",
-  "Log.ProcessNotFound": "Prosess ikke funnet: {0}",
-  "Log.ProcessRunning": "Prosess kjører: {0}",
-  "Log.ProgramAdded": "Program lagt til: {0}",
-  "Log.ProgramNotRunning": "{0} kjører ikke. Starter på nytt om {1} sekunder...",
-  "Log.ProgramRemoved": "Program fjernet: {0}",
-  "Log.ProgramRestarted": "Program omstartet: {0}",
-  "Log.ProgramUpdated": "Innstillinger oppdatert for: {0}",
-  "Log.RestartFailed": "Kunne ikke starte programmet på nytt: {0}",
-  "Log.SettingsUpdated": "Innstillinger oppdatert",
-  "Log.ShuttingDown": "RestartIt avslutter",
-  "Log.Started": "RestartIt startet velykket",
-  "Log.SuccessfullyRestarted": "{0} ble startet på nytt",
-  "Log.ValidationFailed": "Cannot restart {0}: {1}",
-  "Log.WorkingDirectoryInvalid": "Cannot restart {0}: Working directory invalid - {1}",
-  "MainWindow.ActivityLog": "Aktivitetslogg",
-  "MainWindow.AddProgram": "➕ Legg til program",
-  "MainWindow.ClearLog": "Tøm logg",
-  "MainWindow.ExportLogs": "Eksporter logger",
-  "MainWindow.MonitoringActive": "Overvåking aktiv",
-  "MainWindow.MonitoringStopped": "Overvåking stoppet",
-  "MainWindow.Remove": "Fjern",
-  "MainWindow.Settings": "Innstilinger",
-  "ProgramEdit.AddTitle": "Legg til program",
-  "ProgramEdit.Arguments": "Argumenter:",
-  "ProgramEdit.ArgumentsOptional": "Arguments (optional):",
-  "ProgramEdit.Browse": "Bla gjennom...",
-  "ProgramEdit.CheckInterval": "Sjekkintervall (sekunder):",
-  "ProgramEdit.ExecutablePath": "Eksekverbar sti:",
-  "ProgramEdit.InvalidDelay": "Omstartsforsinkelse må være minst 1 sekund.",
-  "ProgramEdit.InvalidInterval": "Sjekkintervall må være minst 5 sekunder.",
-  "ProgramEdit.InvalidPath": "Vennligst velg en gyldig eksekverbar fil.",
-  "ProgramEdit.ProgramName": "Programnavn:",
-  "ProgramEdit.ProgramNameRequired": "Programnavn er påkrevd.",
-  "ProgramEdit.RestartDelay": "Omstartsforsinkelse (sekunder):",
-  "ProgramEdit.Title": "Rediger program",
-  "ProgramEdit.ValidationError": "Valideringsfeil",
-  "ProgramEdit.WorkingDirectory": "Arbeidsmappe:",
-  "ProgramEdit.WorkingDirectoryOptional": "Working Directory (optional):",
-  "Settings.About": "Om",
-  "Settings.About.Copyright": "Opphavsrett © 2025 Antik79",
-  "Settings.About.Description": "En Windows skrivebordsapplikasjon som overvåker spesifiserte programmer og automatisk starter dem på nytt hvis de slutter å kjøre.",
-  "Settings.About.GitHub": "GitHub-repositorium",
-  "Settings.About.License": "Lisensiert under MIT‑lisensen",
-  "Settings.About.TechStack": "Bygd med .NET 8.0 og WPF",
-  "Settings.About.Version": "Versjon",
-  "Settings.App.Language": "Språk:",
-  "Settings.App.MinimizeToTray": "Minimer til systemstatusfelt",
-  "Settings.App.MinimizeToTrayDesc": "Når minimert, skjuler applikasjonen seg i systemstatusfeltet i stedet for oppgavelinjen.",
-  "Settings.App.StartMinimized": "Start minimert",
-  "Settings.App.StartMinimizedDesc": "Start RestartIt minimert til systemstatusfeltet (krever at 'Minimer til systemstatusfelt' er aktivert).",
-  "Settings.App.StartWithWindows": "Start med Windows",
-  "Settings.App.StartWithWindowsDesc": "Start automatisk RestartIt når Windows starter.",
-  "Settings.Application": "Applikasjon",
-  "Settings.Email.Enable": "Aktiver e‑postvarsler",
-  "Settings.Email.NotifyOnFailure": "Varsle ved omstartsfeil",
-  "Settings.Email.NotifyOnRestart": "Varsle ved vellykket omstart",
-  "Settings.Email.RecipientEmail": "Mottaker e‑post:",
-  "Settings.Email.RecipientEmailRequired": "Please enter recipient email.",
-  "Settings.Email.SenderEmail": "Avsender e‑post:",
-  "Settings.Email.SenderEmailRequired": "Please enter sender email.",
-  "Settings.Email.SenderName": "Avsender navn:",
-  "Settings.Email.SenderPassword": "Avsender passord:",
-  "Settings.Email.SmtpPort": "SMTP‑port:",
-  "Settings.Email.SmtpPortInvalid": "Please enter valid SMTP port.",
-  "Settings.Email.SmtpServer": "SMTP‑server:",
-  "Settings.Email.SmtpServerRequired": "Please enter SMTP server.",
-  "Settings.Email.TestBody": "This is a test email to verify your email notification settings are working correctly.\n\nIf you receive this email, your settings are configured properly!",
-  "Settings.Email.TestEmail": "Send test‑e‑post",
-  "Settings.Email.TestError": "E‑posttest mislyktes",
-  "Settings.Email.TestErrorMessage": "Failed to send test email:\n\n{0}\n\nCommon issues:\n• Wrong SMTP server or port\n• Invalid credentials\n• App password required (Gmail)\n• Firewall blocking SMTP",
-  "Settings.Email.TestSubject": "Test Email from RestartIt",
-  "Settings.Email.TestSuccess": "Test‑e‑post sendt",
-  "Settings.Email.TestSuccessMessage": "Test‑e‑post sendt vellykket! Sjekk innboksen din.",
-  "Settings.Email.UseSsl": "Bruk SSL/TLS",
-  "Settings.EmailNotifications": "E‑postvarsler",
-  "Settings.Logging": "Logging",
-  "Settings.Logging.EnableFileLogging": "Aktiver fillogging",
-  "Settings.Logging.KeepLogsFor": "Behold loggfiler i (dager):",
-  "Settings.Logging.LogFileDirectory": "Log File Directory:",
-  "Settings.Logging.LogFilePath": "Loggfilsti:",
-  "Settings.Logging.MaxFileSize": "Maks filstørrelse (MB):",
-  "Settings.Logging.MinLogLevel": "Minimum loggnivå:",
-  "Settings.Logging.OpenFolder": "Åpne loggmappen",
-  "Settings.Title": "Innstillinger",
-  "Status.Failed": "Mislyktes",
-  "Status.Restarting": "Starter på nytt",
-  "Status.Running": "Kjører",
-  "Status.Stopped": "Stoppet",
-  "Status.Unknown": "Ukjent",
-  "Tray.Exit": "Avslutt",
-  "Tray.MinimizedMessage": "Applikasjonen er minimert til systemstatusfelt",
-  "Tray.ShowWindow": "Vis vindu",
-  "Validation.ArgumentsTooLong": "Arguments are too long. Maximum length is 8192 characters.",
-  "Validation.DirectoryNotFound": "The working directory does not exist.",
-  "Validation.DirectoryValidationError": "Error validating directory: {0}",
-  "Validation.ExecutablePathRequired": "Executable path is required.",
-  "Validation.FileNotFound": "The executable file does not exist.",
-  "Validation.InvalidNullCharacter": "Arguments cannot contain null characters.",
-  "Validation.InvalidPathCharacters": "The path contains invalid characters.",
-  "Validation.InvalidPathFormat": "The path format is invalid.",
-  "Validation.NoFileExtension": "The file does not have an extension. Please specify a valid executable file.",
-  "Validation.PathIsDirectory": "The specified path is a directory, not a file.",
-  "Validation.PathNotSupported": "The path format is not supported.",
-  "Validation.PathTooLong": "The path is too long. Maximum length is 260 characters.",
-  "Validation.PathValidationError": "Error validating path: {0}",
-  "Settings.Appearance": "Appearance",
-  "Settings.Appearance.FontFamily": "Font Family:",
-  "Settings.Appearance.FontSize": "Font Size:",
-  "Settings.Appearance.BackgroundColor": "Background Color:",
-  "Settings.Appearance.TextColor": "Text Color:",
-  "Settings.Appearance.HighlightColor": "Highlight Color:",
-  "Settings.Appearance.BorderColor": "Border Color:",
-  "Settings.Appearance.SurfaceColor": "Surface Color:",
-  "Settings.Appearance.SecondaryTextColor": "Secondary Text Color:",
-  "Settings.Appearance.Preview": "Preview:",
-  "Settings.Appearance.ResetToDefaults": "Reset to Defaults"
-}
+{ "_metadata": { "code": "no", "name": "Norwegian", "nativeName": "Norsk", "icon": "🇳🇴" }, "App.Title": "RestartIt - Applikasjonsmonitor", "App.TrayTitle": "RestartIt - Applikasjonsmonitor",
+
+"MainWindow.AddProgram": "➕ Legg til program", "MainWindow.Remove": "Fjern", "MainWindow.ExportLogs": "Eksporter logger", "MainWindow.Settings": "Innstilinger", "MainWindow.MonitoringActive": "Overvåking aktiv", "MainWindow.MonitoringStopped": "Overvåking stoppet", "MainWindow.ActivityLog": "Aktivitetslogg", "MainWindow.ClearLog": "Tøm logg",
+
+"DataGrid.Enabled": "Aktivert", "DataGrid.ProgramName": "Programnavn", "DataGrid.Path": "Sti", "DataGrid.CheckInterval": "Sjekkintervall (sek)", "DataGrid.RestartDelay": "Omstartsforsinkelse (sek)", "DataGrid.Status": "Status", "DataGrid.Actions": "Handlinger", "DataGrid.Edit": "⚙ Rediger",
+
+"Status.Running": "Kjører", "Status.Stopped": "Stoppet", "Status.Restarting": "Starter på nytt", "Status.Failed": "Mislyktes", "Status.Unknown": "Ukjent",
+
+"Dialog.SelectProgram": "Velg program å overvåke", "Dialog.ConfirmRemoval": "Bekreft fjerning", "Dialog.RemoveQuestion": "Er du sikker på at du vil fjerne '{0}' fra overvåkingen?", "Dialog.NoSelection": "Ingen valg", "Dialog.SelectProgramFirst": "Vennligst velg et program som skal fjernes.", "Dialog.Yes": "Ja", "Dialog.No": "Nei", "Dialog.OK": "OK", "Dialog.Cancel": "Avbryt", "Dialog.Apply": "Bruk", "Dialog.SaveTestEmail": "Lagre og test e‑post",
+
+"ProgramEdit.Title": "Rediger program", "ProgramEdit.AddTitle": "Legg til program", "ProgramEdit.ProgramName": "Programnavn:", "ProgramEdit.ExecutablePath": "Eksekverbar sti:", "ProgramEdit.Browse": "Bla gjennom...", "ProgramEdit.Arguments": "Argumenter:", "ProgramEdit.WorkingDirectory": "Arbeidsmappe:", "ProgramEdit.CheckInterval": "Sjekkintervall (sekunder):", "ProgramEdit.RestartDelay": "Omstartsforsinkelse (sekunder):", "ProgramEdit.ValidationError": "Valideringsfeil", "ProgramEdit.ProgramNameRequired": "Programnavn er påkrevd.", "ProgramEdit.InvalidPath": "Vennligst velg en gyldig eksekverbar fil.", "ProgramEdit.InvalidInterval": "Sjekkintervall må være minst 5 sekunder.", "ProgramEdit.InvalidDelay": "Omstartsforsinkelse må være minst 1 sekund.",
+
+"Settings.Title": "Innstillinger", "Settings.Logging": "Logging", "Settings.EmailNotifications": "E‑postvarsler", "Settings.Application": "Applikasjon", "Settings.About": "Om",
+
+"Settings.Logging.EnableFileLogging": "Aktiver fillogging", "Settings.Logging.LogFilePath": "Loggfilsti:", "Settings.Logging.MinLogLevel": "Minimum loggnivå:", "Settings.Logging.MaxFileSize": "Maks filstørrelse (MB):", "Settings.Logging.KeepLogsFor": "Behold loggfiler i (dager):", "Settings.Logging.OpenFolder": "Åpne loggmappen",
+
+"Settings.Email.Enable": "Aktiver e‑postvarsler", "Settings.Email.SmtpServer": "SMTP‑server:", "Settings.Email.SmtpPort": "SMTP‑port:", "Settings.Email.UseSsl": "Bruk SSL/TLS", "Settings.Email.SenderEmail": "Avsender e‑post:", "Settings.Email.SenderName": "Avsender navn:", "Settings.Email.SenderPassword": "Avsender passord:", "Settings.Email.RecipientEmail": "Mottaker e‑post:", "Settings.Email.NotifyOnRestart": "Varsle ved vellykket omstart", "Settings.Email.NotifyOnFailure": "Varsle ved omstartsfeil", "Settings.Email.TestEmail": "Send test‑e‑post", "Settings.Email.TestSuccess": "Test‑e‑post sendt", "Settings.Email.TestSuccessMessage": "Test‑e‑post sendt vellykket! Sjekk innboksen din.", "Settings.Email.TestError": "E‑posttest mislyktes",
+
+"Settings.App.StartWithWindows": "Start med Windows", "Settings.App.StartWithWindowsDesc": "Start automatisk RestartIt når Windows starter.", "Settings.App.MinimizeToTray": "Minimer til systemstatusfelt", "Settings.App.MinimizeToTrayDesc": "Når minimert, skjuler applikasjonen seg i systemstatusfeltet i stedet for oppgavelinjen.", "Settings.App.StartMinimized": "Start minimert", "Settings.App.StartMinimizedDesc": "Start RestartIt minimert til systemstatusfeltet (krever at 'Minimer til systemstatusfelt' er aktivert).", "Settings.App.Language": "Språk:",
+
+"Settings.About.Version": "Versjon", "Settings.About.Description": "En Windows skrivebordsapplikasjon som overvåker spesifiserte programmer og automatisk starter dem på nytt hvis de slutter å kjøre.", "Settings.About.GitHub": "GitHub-repositorium", "Settings.About.Copyright": "Opphavsrett © 2025 Antik79", "Settings.About.License": "Lisensiert under MIT‑lisensen", "Settings.About.TechStack": "Bygd med .NET 8.0 og WPF",
+
+"Export.Title": "Eksporter logger", "Export.Filter": "Tekstfiler (.txt)|.txt|Loggfiler (.log)|.log|Alle filer (.)|.", "Export.Success": "Eksport fullført", "Export.LogsExported": "Logger eksportert vellykket!", "Export.UILogsExported": "UI‑logger eksportert vellykket!", "Export.Error": "Eksportfeil", "Export.ErrorMessage": "Feil ved eksport av logger: {0}",
+
+"Tray.ShowWindow": "Vis vindu", "Tray.Exit": "Avslutt", "Tray.MinimizedMessage": "Applikasjonen er minimert til systemstatusfelt",
+
+"Log.Started": "RestartIt startet velykket", "Log.ShuttingDown": "RestartIt avslutter", "Log.ProgramAdded": "Program lagt til: {0}", "Log.ProgramRemoved": "Program fjernet: {0}", "Log.ProgramUpdated": "Innstillinger oppdatert for: {0}", "Log.SettingsUpdated": "Innstillinger oppdatert", "Log.MonitoringEnabled": "Overvåking aktivert for: {0}", "Log.MonitoringDisabled": "Overvåking deaktivert for: {0}", "Log.LogsExported": "Logger eksportert til: {0}", "Log.ProgramRestarted": "Program omstartet: {0}", "Log.RestartFailed": "Kunne ikke starte programmet på nytt: {0}", "Log.ProcessNotFound": "Prosess ikke funnet: {0}", "Log.ProcessRunning": "Prosess kjører: {0}", "Log.ProgramNotRunning": "{0} kjører ikke. Starter på nytt om {1} sekunder...", "Log.ErrorMonitoring": "Feil ved overvåkning av {0}: {1}", "Log.ErrorCheckingProcess": "Feil ved kontroll om {0} kjører: {1}", "Log.SuccessfullyRestarted": "{0} ble startet på nytt", "Log.FailedToRestart": "Kunne ikke starte {0} på nytt: {1}",
+
+"Email.Subject.Restart": "RestartIt: Program omstartet - {0}", "Email.Subject.Failed": "RestartIt: Omstart mislyktes - {0}", "Email.Body.Restarted": "Programmet '{0}' har sluttet å kjøre og ble automatisk startet på nytt.", "Email.Body.Failed": "Programmet '{0}' har sluttet å kjøre men kunne ikke startes på nytt.", "Email.Body.Time": "Tid: {0}", "Email.Body.Path": "Sti: {0}", "Email.Body.Signature": "Dette er en automatisert melding fra RestartIt Application Monitor." }
